# AlgoniaEngine

./: .gitignore  README.md  ZenComplete.code-workspace
Dockers/: Dockerfile_Kali_Py_37  Dockerfile_Ubuntu_18_04_Py_37
Elements/ZenCounter/: ZenCounter.c  makefile
Elements/ZenCsScriptWrapper/: ZenCsScriptWrapper.c  makefile  makefile_debug
Elements/ZenDebugWrapper/: ZenDebugWrapper.c  makefile
Elements/ZenElementsExecuterWrapper/: ZenElementsExecuterWrapper.c  makefile
Elements/ZenGUI/: ZenGUI.c  ZenGUI.h  makefile  makefile_debug
Elements/ZenGUI/algonia-webview/: Cargo.toml
Elements/ZenGUI/algonia-webview/src/: lib.rs
Elements/ZenGUI/algonia-webview/src/todo/: app.js
Elements/ZenGwSystemInfoWrapper/: ZenGwSystemInfoWrapper.c  ZenGwSystemInfoWrapper.h  makefile
Elements/ZenHttpRequestWrapper/: ZenHttpRequestWrapper.c  makefile
Elements/ZenLicenceCheckerWrapper/: ZenLicenceCheckerWrapper.c  makefile
Elements/ZenMLContextWrapper/: ZenMLContextWrapper.c  makefile
Elements/ZenMLDataProcessPipelineWrapper/: ZenMLDataProcessPipelineWrapper.c  makefile
Elements/ZenMLModelEvaluationWrapper/: ZenMLModelEvaluationWrapper.c  makefile
Elements/ZenMLRowsFilterWrapper/: ZenMLRowsFilterWrapper.c  makefile
Elements/ZenMLTextLoaderSchemaWrapper/: ZenMLTextLoaderSchemaWrapper.c  makefile
ZenCommon/: ZenCommon.c  ZenCommon.h  makefile  makefile_debug
ZenEngine/: AlgoniaEngine.c  AlgoniaEngine.h  makefile  makefile_debug  makefile_lib
make/: Dockerfile  build_docker.bat  build_win.bat  make.sh  make_clean.sh  make_mac.sh  publish_win.bat
(+126 files in other folders)
